--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,13 @@ annotated-types==0.7.0
 anyio==4.11.0
 async-timeout==5.0.1
 attrs==25.3.0
+Authlib==1.6.5
 backoff==2.2.1
 backports.asyncio.runner==1.2.0
+backports.tarfile==1.2.0
 banks==2.2.0
 bcrypt==5.0.0
+beartype==0.22.5
 beautifulsoup4==4.14.2
 build==1.3.0
 cachetools==6.2.1
@@ -21,13 +24,20 @@ click==8.3.0
 colorama==0.4.6
 coloredlogs==15.0.1
 cryptography==46.0.3
+cyclopts==4.2.3
 dataclasses-json==0.6.7
 defusedxml==0.7.1
 Deprecated==1.2.18
 dirtyjson==1.0.8
+diskcache==5.6.3
 distro==1.9.0
+dnspython==2.8.0
+docstring_parser==0.17.0
+docutils==0.22.3
 durationpy==0.10
+email-validator==2.3.0
 exceptiongroup==1.3.0
+fastmcp==2.13.0.2
 filelock==3.20.0
 filetype==1.2.0
 flatbuffers==25.9.23
@@ -50,11 +60,17 @@ idna==3.10
 importlib_metadata==8.7.0
 importlib_resources==6.5.2
 iniconfig==2.1.0
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.3.0
+jeepney==0.9.0
 Jinja2==3.1.6
 jiter==0.11.0
 joblib==1.5.2
 jsonschema==4.25.1
+jsonschema-path==0.3.4
 jsonschema-specifications==2025.9.1
+keyring==25.6.0
 kubernetes==34.1.0
 llama-cloud==0.1.35
 llama-cloud-services==0.6.54
@@ -79,6 +95,7 @@ marshmallow==3.26.1
 mcp==1.21.0
 mdurl==0.1.2
 mmh3==5.2.0
+more-itertools==10.8.0
 mpmath==1.3.0
 multidict==6.6.4
 mypy_extensions==1.1.0
@@ -90,6 +107,7 @@ oauthlib==3.3.1
 ollama==0.6.0
 onnxruntime==1.23.2
 openai==1.109.1
+openapi-pydantic==0.5.1
 opentelemetry-api==1.38.0
 opentelemetry-exporter-otlp-proto-common==1.38.0
 opentelemetry-exporter-otlp-proto-grpc==1.38.0
@@ -100,12 +118,16 @@ orjson==3.11.4
 overrides==7.7.0
 packaging==25.0
 pandas==2.2.3
+pathable==0.4.4
+pathvalidate==3.3.1
 pillow==11.3.0
 platformdirs==4.4.0
 pluggy==1.6.0
 posthog==5.4.0
 propcache==0.3.2
 protobuf==6.33.0
+py-key-value-aio==0.2.8
+py-key-value-shared==0.2.8
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pybase64==1.4.2
@@ -116,6 +138,7 @@ pydantic_core==2.33.2
 Pygments==2.19.2
 PyJWT==2.10.1
 pypdf==6.1.1
+pyperclip==1.11.0
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 pytest==8.4.2
@@ -125,13 +148,15 @@ python-dotenv==1.1.1
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.3
-referencing==0.37.0
+referencing==0.36.2
 regex==2025.9.18
 requests==2.32.5
 requests-oauthlib==2.0.0
 rich==14.2.0
+rich-rst==1.3.2
 rpds-py==0.28.0
 rsa==4.9.1
+SecretStorage==3.4.1
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
