--- a/agent/requirements.txt
+++ b/agent/requirements.txt
@@ -1,8 +1,11 @@
-llama-index==0.14.3
-llama-index-core==0.14.3
-llama-index-embeddings-ollama==0.8.3
-llama-index-llms-ollama==0.7.4
-llama-index-tools-mcp==0.4.3
-llama-index-vector-stores-chroma==0.5.3
-llama-index-workflows==2.5.0
-rich==14.2.0
+llama-index
+llama-index-core
+llama-index-embeddings-ollama
+llama-index-llms-ollama
+llama-index-tools-mcp
+llama-index-vector-stores-chroma
+llama-index-workflows
+rich
+llama-index-embeddings-ollama
+pymupdf
+llama-index-readers-file
