--- a/agent/requirements.txt
+++ b/agent/requirements.txt
@@ -4,5 +4,7 @@ llama-index-embeddings-ollama
 llama-index-llms-ollama
 llama-index-tools-mcp
 llama-index-workflows
+llama-index-llms-anthropic
+python-dotenv
 rich
 tiktoken
